fix wide body content overlap

--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -1493,10 +1493,10 @@ div.focused_table {
     position: relative;
     overflow: hidden;
     @media (width < $sm_min) {
-	width: 90%;
+	width: 100%;
     }
     @media (width >= $sm_min) {
-	width: 110%;
+	width: 105%;
     }
 
     &:empty {
